--- a/src/components/MainDashboard/MainDashboard.module.css
+++ b/src/components/MainDashboard/MainDashboard.module.css
@@ -26,24 +26,19 @@
   }
 }
 .container::-webkit-scrollbar {
-  width: 12px; /* Ширина скролу (параметр бару) */
-  background-color: #161616; /* Колір фону скролу */
-  border-radius: 12px;
+  width: 6px; /* Ширина скролу (параметр бару) */
+  background-color: transparent; /* Колір фону скролу */
+  border-radius: 6px;
 }
 
 .container::-webkit-scrollbar-thumb {
   background-color: transparent; /* Колір бару скролу */
   outline: 1px solid transparent; /* Обводка бару скролу */
-  border-radius: 12px;
+  border-radius: 6px;
 }
 
 .container:hover::-webkit-scrollbar-thumb {
-  background-color: rgba(
-    255,
-    255,
-    255,
-    0.1
-  ); /* Колір бару скролу при наведенні (параметр бару) */
+  background-color: rgba(22, 22, 22, 0.3);
 }
 
 .buttonDark {
